--- a/client_loans.html
+++ b/client_loans.html
@@ -153,7 +153,7 @@
       const container = document.getElementById("client-loans-list");
       container.innerHTML = "<p>Chargement en cours...</p>";
 
-      fetch("/Final_S4/ws/client_loans")
+      fetch("/ws/client_loans")
         .then((response) => {
           if (!response.ok) throw new Error("Erreur réseau");
           return response.json();
@@ -255,7 +255,7 @@
 
       container.innerHTML = "<p>Chargement en cours...</p>";
 
-      fetch(`/Final_S4/ws/client_loans/${clientId}`)
+      fetch(`/ws/client_loans/${clientId}`)
         .then((res) => res.json())
         .then((data) => {
           if (!Array.isArray(data)) {
