--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="fonds.html">Gestion des fonds</a></li>
         <li><a href="loan_types.html">Gestion des types de prêt</a></li>
         <li><a href="client_loans.html">Gestion des prêts clients</a></li>
+        <li><a href="remboursement.html">Gestion des remboursements</a></li>
         <li><a href="monthly_interests.html">Intérêts mensuels</a></li>
         <li><a href="amortissement.html">Simulation d'amortissement</a></li>
         <li><a href="simulation_pret.html">Simulation de prêts</a></li>
@@ -33,7 +34,8 @@
             <a href="fonds.html" class="btn btn-primary">Gestion des fonds</a>
             <a href="loan_types.html" class="btn btn-primary">Types de prêt</a>
             <a href="client_loans.html" class="btn btn-primary">Prêts clients</a>
-            <li><a href="simulation_pret.html">Simulation de prêts</a></li>
+            <a href="remboursement.html" class="btn btn-primary">Remboursements</a>
+            <a href="simulation_pret.html" class="btn btn-primary">Simulation de prêts</a>
           </div>
         </div>
       </div>
