--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="loan_types.html" class="btn btn-primary">Types de prêt</a>
             <a href="client_loans.html" class="btn btn-primary">Prêts clients</a>
             <a href="simulation_pret.html" class="btn btn-primary">Simulation de prêts</a>
+            <a href="remboursement.html" class="btn btn-primary">Remboursement</a>
           </div>
         </div>
       </div>
