--- a/amortissement.html
+++ b/amortissement.html
@@ -99,7 +99,7 @@
   </main>
 
   <footer>
-    <p>© 2023 Etablissement financier - Simulation d'amortissement</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
