--- a/client_loans.html
+++ b/client_loans.html
@@ -117,7 +117,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Prêts clients</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
@@ -335,5 +335,7 @@
       chargerClientLoans();
     });
   </script>
+
 </body>
+
 </html>
