--- a/interest_earned.html
+++ b/interest_earned.html
@@ -62,9 +62,8 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Intérêts gagnés</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
-
   <script>
     function showMessage(message, type = 'success') {
       const container = document.getElementById('message-container');
