--- a/loan_types.html
+++ b/loan_types.html
@@ -62,7 +62,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Types de prêt</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
