--- a/monthly_interests.html
+++ b/monthly_interests.html
@@ -67,9 +67,9 @@
         </section>
     </main>
 
-    <footer>
-        <p>© 2023 Etablissement financier - Intérêts mensuels</p>
-    </footer>
+  <footer>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
+  </footer>
 
     <script>
         let interestChart;
