--- a/simulation_pret.html
+++ b/simulation_pret.html
@@ -75,7 +75,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Etablissement financier - Simulation de prêts</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
