--- a/fonds.html
+++ b/fonds.html
@@ -62,7 +62,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Gestion des fonds</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
