--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Tous droits réservés</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 </body>
 </html>
