--- a/remboursement.html
+++ b/remboursement.html
@@ -162,7 +162,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Etablissement financier - Gestion des remboursements</p>
+    <p>ETU003268 - ETU003330 - ETU003367</p>
   </footer>
 
   <script>
